Adiciona sitemap.xml para SEO

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="twitter:description"
     content="Desenvolvedor Front-end especializado em React, TypeScript e criação de interfaces modernas." />
 
-  <title>Denilson Faria | Dev Front-end</title>
+  <title>Denilson Faria | Desenvolvedor Front-End React & TypeScript</title>
 </head>
 
 <body>
